redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: mova-erinnerungsbuch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      containers:
        - image: redis:8-alpine@sha256:3811787313eba226a2ef38658c6ccb91cd5e110edc89c37767de373120a0e5a0
          name: redis
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: mova-erinnerungsbuch
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
