backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mova-erinnerungsbuch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      securityContext:
        fsGroup: 3000
      containers:
        - name: backend
          image: ghcr.io/scout-ch/mova-erinnerungsbuch-backend:latest@sha256:3b59bacff7fb5a5af50595c8a8a51692f02fbf54a26726a6ce61d79306f1b47e
          volumeMounts:
            - mountPath: /app/config/license.key
              name: craft-license
              readOnly: true
              recursiveReadOnly: IfPossible
              subPath: license.key
            - mountPath: /app/storage
              name: craft-storage
      restartPolicy: Always
      volumes:
        - name: craft-license
          secret:
            items:
              - key: license.key
                path: license.key
            secretName: craft-license
        - name: craft-storage
          persistentVolumeClaim:
            claimName: craft-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: mova-erinnerungsbuch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: worker
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      securityContext:
        fsGroup: 3000
      containers:
        - name: backend
          command: ["php", "craft", "queue/listen", "--verbose"]
          image: ghcr.io/scout-ch/mova-erinnerungsbuch-backend:latest@sha256:3b59bacff7fb5a5af50595c8a8a51692f02fbf54a26726a6ce61d79306f1b47e
          volumeMounts:
            - mountPath: /app/config/license.key
              name: craft-license
              readOnly: true
              recursiveReadOnly: IfPossible
              subPath: license.key
            - mountPath: /app/storage
              name: craft-storage
      restartPolicy: Always
      volumes:
        - name: craft-license
          secret:
            items:
              - key: license.key
                path: license.key
            secretName: craft-license
        - name: craft-storage
          persistentVolumeClaim:
            claimName: craft-storage
      affinity:
        podAffinity: # We need to schedule this on the same node as taiga-back because of shared volumes
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - backend
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mova-erinnerungsbuch
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: mova-erinnerungsbuch
spec:
  parentRefs:
    - name: mova-erinnerungsbuch
      sectionName: https
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /graphql
        - path:
            type: PathPrefix
            value: /cpresources
        - path:
            type: PathPrefix
            value: /actions
        - path:
            type: PathPrefix
            value: /sitemap.xml
        - path:
            type: PathPrefix
            value: /robots.txt

      backendRefs:
        - name: backend
          port: 8080
