frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: mova-erinnerungsbuch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      containers:
        - envFrom:
            - configMapRef:
                name: frontend
          image: ghcr.io/scout-ch/mova-erinnerungsbuch-frontend:latest@sha256:576b2beca188298d2570ec02897f9d932ba530b51dd4177995f330847a086004
          name: frontend
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: mova-erinnerungsbuch
spec:
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: mova-erinnerungsbuch
spec:
  parentRefs:
    - name: mova-erinnerungsbuch
      sectionName: https-www
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: frontend
          port: 5173
